--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tribute Page</title>
 </head>
 <body>
-    
+    <main id="mian">
+        <div id="title">Dr.Norman Borlaug</div>
+        <figure id="img-div">
+            <img src="" alt="Dr.Norman Borlaug" id="image"><caption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</caption>
+        </figure>
+    </main>
 </body>
 </html>
