--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 </head>
 <body>
     <main id="mian">
-        <div id="title">Dr.Norman Borlaug</div>
+        <h1 id="title">Dr.Norman Borlaug</h1>
+        <p>The man who saved billion lives</p>
         <figure id="img-div">
-            <img src="" alt="Dr.Norman Borlaug" id="image"><caption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</caption>
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr.Norman Borlaug" id="image">
+            <figcaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</figcaption>
         </figure>
     </main>
 </body>
