html citation added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1 id="title">Dr.Norman Borlaug</h1>
         <p>The man who saved billion lives</p>
         <figure id="img-div">
-            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr.Norman Borlaug" id="image">
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr. Norman Borlaug seen standing in Mexican wheat field with a group of biologists" id="image">
             <figcaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</figcaption>
         </figure>
         <section id="tribute-info">
@@ -39,8 +39,8 @@
             </p>
             <cite>-- Indian Prime Minister Manmohan Singh</cite>
             <h3>
-                " If you have time, you should read more about this incredible human being on his "
-                <a href="https://en.wikipedia.org/wiki/Norman_Borlaug" id="tribute-link" target="_blank">wikipedia entry</a>". "
+                If you have time, you should read more about this incredible human being on his
+                <a href="https://en.wikipedia.org/wiki/Norman_Borlaug" id="tribute-link" target="_blank">Wikipedia entry</a>.
             </h3>
         </section>
     </main>
