--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Tribute Page</title>
 </head>
 <body>
-    <main id="mian">
+    <main id="main">
         <h1 id="title">Dr.Norman Borlaug</h1>
         <p>The man who saved billion lives</p>
         <figure id="img-div">
