--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Tribute Page</title>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"> </script>
 </head>
 <body>
     <main id="main">
+        <div id ="google_translate_element"></div>
         <h1 id="title">Dr.Norman Borlaug</h1>
         <p>The man who saved billion lives</p>
         <figure id="img-div">
@@ -46,4 +48,9 @@
         </section>
     </main>
 </body>
+<script>
+    function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
 </html>
